manifests/Module 03/deployment_kuar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kuard-deployment
  replicas: 4
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kuard-deployment
    spec:
      containers:
        - image: gcr.io/kuar-demo/kuard-amd64:1
          imagePullPolicy: Always
          name: kuard
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: kuard-deployment
