manifests/Module 03/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuard-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - <yourusername>.kubernetes.at-previder.cloud
      secretName: kuard-ingress-tls
  rules:
    - host: <yourusername>.kubernetes.at-previder.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuard-service
                port:
                  number: 80
